# python-prometheus

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: exporter.py
k8s/: deployment.yaml  grafana-dashboard.json  ingress.yaml  namespace.yaml  service.yaml
prometheus/: prometheus-config.yaml  prometheus-pv-nfs.yaml
prometheus/Grafana/: grafana-pv-nfs.yaml  grafana-pvc-nfs.yaml
prometheus_temp/: prometheus-pvc-nfs.yaml
