[tool.poetry]
name = "Sample Python Prometheus Exporter"
version = "0.1.0"
description = "A sample python app to export prometheus metrics"
authors = ["Sachin Kumar"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
prometheus-client = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
